Bug fix and update readme.md

--- a/TestWebApplication2/appsettings.json
+++ b/TestWebApplication2/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConfigurationParameters": {
-    "Dockerized": false,
-    "DatabasePath": "C:\\PoojaDocs\\Pooja Docs\\Programs\\FinalVersion\\TestProgram2\\Database\\TestDatabase.db"
+    "DatabasePath": "C:\\Projects\\Netzsch\\Database\\"
   }
 }
